--- a/pages/styles.css
+++ b/pages/styles.css
@@ -98,7 +98,9 @@ body {
     flex: 0 0 auto;
     flex-flow: column nowrap;
     gap: 10px;
-    height: 150px;
+    /* height: 150px; */
+    /* height: fit-content; */
+    height: min-content;
     overflow: hidden;
     padding: 20px;
     position: relative;
@@ -328,7 +330,7 @@ textarea {
 .output-content p {
     text-align: center;
     white-space: pre-line;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.759);
 }
 
 .funked {
